--- a/project/assets/css/global.css
+++ b/project/assets/css/global.css
@@ -1,4 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Potta+One&family=Quicksand:wght@300..700&family=Rammetto+One&family=Zen+Kurenaido&display=swap');
+:root {
+    --cor-fonte: #00224fcc;
+    --cor-botao: #ffae0099;
+    --cor-focus-hover-botao: #ffae00;
+    --cor-rosa: #ff93c5;
+    --cor-vermelha: #f34f4f;
+    --cor-azul: #1eb4ff;
+    --cor-azul-50: #1eb4ff80;
+}
 
 * {
     margin: 0;
@@ -8,7 +16,7 @@
     list-style: none;
     border: none;
     outline: none;
-    font-family: "Zen Kurenaido", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html {
@@ -16,12 +24,11 @@ html {
 }
 
 body{
-    background-color: #f8f4ec;
+    color: var(--cor-fonte); 
 }
 
 a {
-    color: #1100ff;
-    font-family: "Open Sans", sans-serif;
+    color: var(--cor-fonte); 
     cursor: pointer;
 
     &:hover {
@@ -35,10 +42,8 @@ a {
 }
 
 button {
-    font-family: 'Open Sans', sans-serif;
     padding: 1rem 4.5rem;
     cursor: pointer;
-    box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.5);
 
     &:hover,
     &:focus {
@@ -73,6 +78,5 @@ input[type="text"], input[type="number"], input[type="tel"] {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Quicksand', sans-serif;
     font-weight: 600;
 }
